Fix rudder effectivness lable content display.

--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -48,7 +48,7 @@
 </div>
 
 <div class="overlay">
-  <app-rudder-effectiveness (labelSelected)="labelSelected($event)" [rudderEffectiveness]="rudderEffectiveness"></app-rudder-effectiveness>
+  <app-rudder-effectiveness (labelSelected)="onLabelSelected($event)" [rudderEffectiveness]="rudderEffectiveness"></app-rudder-effectiveness>
 </div>
 
 <!-- ----------------  -->
