Exercise dialog displays. Basic layout for exercise dialog.

--- a/src/app/ui/views/view-zst/view-zst.component.html
+++ b/src/app/ui/views/view-zst/view-zst.component.html
@@ -44,7 +44,7 @@
 
     <div class="row control">
       <div class="col text-center">
-        <button mat-raised-button class="exercise-button" color="primary">
+        <button mat-raised-button class="exercise-button" color="primary" (click)="openExercise()">
           <h2>Zero Sideslip Exercise</h2>
         </button>
       </div>
