Basic SVG Animation working.

--- a/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
+++ b/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
@@ -3,7 +3,7 @@
     <button mat-raised-button [mat-dialog-close] color="warn" class="inline right">Close</button>
 </div>
 <div class="engine-view">
-    Engine View
+    <div id="bm" class="bm-player"></div>
 </div>
 <div class="control-view">
     <div class="description-view">
