Zero sideslip exercise completed

--- a/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
+++ b/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
@@ -1,8 +1,4 @@
-<div class="dialog-title">
-    <h1 mat-dialog-title class="inline">ZST Exercise</h1>
-    <button mat-raised-button [mat-dialog-close] color="warn" class="inline right">Close</button>
-</div>
-<div class="engine-view">
+<div class="tab-group-wrapper">
     <mat-tab-group class="tab-group" animationDuration="200ms">
         <mat-tab label="Step 1">
             <ng-template matTabContent>
@@ -30,9 +26,4 @@
             </ng-template>
         </mat-tab>
     </mat-tab-group>
-</div>
-<div class="control-view">
-    <div class="description-view">
-        <p></p>
-    </div>
 </div>
