--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,3 +57,7 @@ div.mat-button-toggle-label-content  {
   --color-primary: #{mat-color($app-primary)};
   --color-warn: #{mat-color($app-warn)};
 }
+
+// .mat-tab-body-wrapper {
+//   max-height: 80%!important;
+// }
