--- a/src/app/ui/views/exercise-dialog/exercise-dialog.component.scss
+++ b/src/app/ui/views/exercise-dialog/exercise-dialog.component.scss
@@ -1,53 +1,11 @@
-.inline {
-    display: inline-block;    
-}
-
-.right {
-    float: right;
-}
-
-.left {
-    float: left;
-}
-
-.dialog-title {
-    height: 10%;
-}
-
-.engine-view {
-    top: 10%;
+.tab-group-wrapper {
     width: 100%;
-    height: 70%;
-}
-
-.control-view {
-    bottom: 0%;
-    height: 20%;
-    display: flex;
-}
-
-.description-view {
-    display: inline;
-    width: 100%;
-    padding: 10px;
-    overflow-y:scroll;
-}
-
-.button-group {
-    display:inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    padding: 10px;
-}
-
-.button {
-    height: 5vh;
-    width: 10vw;
-    margin: 5px;
+    min-height: 100%;
+    max-height: 100%;
+    overflow:show;
 }
 
 .tab-group {
-    height: 100%;
-    max-height: 100%;
+    height: 80vh;
+    overflow:visible;
 }
