Adds subscript to all Vmca text.

--- a/src/app/ui/controls/selectable-label/selectable-label.component.html
+++ b/src/app/ui/controls/selectable-label/selectable-label.component.html
@@ -1,8 +1,8 @@
 
 <div *ngIf="size !== 'large'; else elseBlock">
-  <h5 class="text-center" (click)="onClick()">{{label}}</h5>
+  <h5 class="text-center fs-1" (click)="onClick()" [innerHtml]="label"></h5>
 </div>
 <ng-template #elseBlock>
-  <h2  (click)="onClick()">{{label}}</h2>
+  <h1  (click)="onClick()" [innerHtml]="label"></h1>
 </ng-template>
 
