--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <app-selectable-label label="VMCA" lookupValue="vmca" (contentClicked)="onLabelSelected($event)" size="large"></app-selectable-label>
+        <app-selectable-label label="V<sub>MCA</sub>" lookupValue="vmca" (contentClicked)="onLabelSelected($event)" size="large"></app-selectable-label>
       </div>
     </div>
     <div class="row">
