--- a/src/app/ui/views/view-menu/view-menu.component.html
+++ b/src/app/ui/views/view-menu/view-menu.component.html
@@ -12,7 +12,7 @@
     <div class="row mb-5">
       <div class="col-12 my-auto">
         <app-card-button
-          title="Directional Control/VMCA"
+          title="Directional Control/V<sub>MCA</sub>"
           link="/directional-control-vmca"></app-card-button>
       </div>
     </div>
