--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,17 +1,25 @@
 h5 {
-  font-size: 1.5vmin;
+  font-size: .75vw;
+  // font-size: 1.5vmin;
+}
+
+h4 {
+  font-size: 1vw;
 }
 
 h3 {
-  font-size: 1.75vmin;
+  font-size:1.25vw;
+  // font-size: 1.75vmin;
 }
 
 h2 {
-  font-size: 2.5vmin;
+  font-size:1.5vw;
+  // font-size: 2.5vmin;
 }
 
 h1 {
-  font-size: 3vmin;
+  font-size: 2vw;
+  // font-size: 3vmin;
 }
 
 mat-button-toggle {
