--- a/src/app/ui/controls/rudder-effectiveness/rudder-effectiveness.component.html
+++ b/src/app/ui/controls/rudder-effectiveness/rudder-effectiveness.component.html
@@ -1,2 +1,2 @@
 <app-selectable-label label="RUDDER EFFECTIVENESS" lookupValue="rudder-effectiveness" (contentClicked)="labelSelected.emit($event)" size="large"></app-selectable-label>
-<mat-progress-bar mode="determinate" [value]="rudderEffectiveness"></mat-progress-bar>
+<mat-progress-bar mode="determinate" color="accent" [value]="rudderEffectiveness"></mat-progress-bar>
