--- a/src/app/ui/views/view-sep/view-sep.component.scss
+++ b/src/app/ui/views/view-sep/view-sep.component.scss
@@ -20,7 +20,7 @@
 }
 
 .dynamic {
-  font-size: 250%;
+  // font-size: 250%;
   font-weight: normal;
   display: inline-block;
   color: var(--color-primary);
