--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -33,6 +33,39 @@ $md-undprimary: (
     )
 );
 
+$md-undaccent: (
+    50: #80ff80,
+    100: #66ff66,
+    200: #4dff4d,
+    300: #33ff33,
+    400: #1aff1a,
+    500: #00FF00,
+    600: #00e600,
+    700: #00cc00,
+    800: #00b300,
+    900: #009900,
+    A100: #99ff99,
+    A200: #b3ffb3,
+    A400: #ccffcc,
+    A700: #005000,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
 $md-undwarn: (
     50 : #ffede4,
     100 : #ffd1bc,
@@ -65,9 +98,8 @@ $md-undwarn: (
         A700 : #000000,
     )
 );
-
 $app-primary: mat-palette($md-undprimary, 500, 300, 900); //, 700, 300, 900);
-$app-accent: mat-palette($mat-red);
+$app-accent: mat-palette($md-undaccent, 500, A700, 50);
 $app-warn: mat-palette($md-undwarn, 500, 300, 900);
 
 $app-theme: mat-dark-theme(
