--- a/src/app/ui/views/exercise-dialog/svg-view/svg-view.component.html
+++ b/src/app/ui/views/exercise-dialog/svg-view/svg-view.component.html
@@ -1,2 +1,2 @@
 <div [id]="animation" class="exercise-view"></div>
-<div class="description-view" [innerHtml]="this.content"></div>
+<div class="description-view" [innerHtml]="content"></div>
