A few minor adjustments

--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <app-selectable-label label="VYSE" lookupValue="vyse" (contentClicked)="onLabelSelected($event)" size="large"></app-selectable-label>
+        <app-selectable-label label="V<sub>YSE</sub>" lookupValue="vyse" (contentClicked)="onLabelSelected($event)" size="large"></app-selectable-label>
       </div>
     </div>
     <div class="row">
