Tweak exercise dialog image.

--- a/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
+++ b/src/app/ui/views/exercise-dialog/exercise-dialog.component.html
@@ -2,7 +2,7 @@
     <mat-tab-group class="tab-group" animationDuration="0ms">
         <mat-tab label="Step 1">
             <ng-template matTabContent>
-                <app-svg-view animation="step-1" [autoplay]="true" [loop]="false"></app-svg-view>
+                <app-svg-view style="overflow:hidden;" animation="step-1" [autoplay]="true" [loop]="false"></app-svg-view>
             </ng-template>
         </mat-tab>
         <mat-tab label="Step 2">
