--- a/src/app/ui/views/exercise-dialog/exercise-dialog.component.scss
+++ b/src/app/ui/views/exercise-dialog/exercise-dialog.component.scss
@@ -2,10 +2,17 @@
     width: 100%;
     min-height: 100%;
     max-height: 100%;
-    overflow:show;
+}
+
+mat-tab-group {
+    overflow: hidden;
 }
 
 .tab-group {
     height: 80vh;
-    overflow:visible;
+    //overflow:visible;
+}
+
+.mat-tab-body-content {
+    overflow: hidden;
 }
