--- a/src/app/ui/controls/card-button/card-button.component.html
+++ b/src/app/ui/controls/card-button/card-button.component.html
@@ -1,3 +1,3 @@
-<mat-card class="card" [routerLink]="link">
+<mat-card class="card mat-app-background dark-theme" [routerLink]="link">
   <h2 class="header text-center" [innerHtml]="title"></h2>
 </mat-card>
