--- a/src/app/ui/ui.component.scss
+++ b/src/app/ui/ui.component.scss
@@ -1,27 +1,22 @@
-@import 'src/styles/styles.scss';
 
 @mixin app-borders($app-theme) {
-  $accent: map-get($app-theme, accent);
 
-  border-color: mat-color($accent);
+  border-color: var(--accent-color);
   border-width: 1px;
 }
 
 .panel {
   position: absolute;
   padding: 0;
-  @include app-borders($app-theme);
 }
 
 .panel.control {
-  // border-style: none none none solid;
   width: 25%;
   height: 78%;
   right: 0em;
 }
 
 .panel.description {
-  // border-style: solid none none none;
   width: 75%;
   height: 15%;
   bottom: 0em;
